Feat: Add management mode node detail
- Add management mode node detail
