# node/views.py
@@ -1,6 +1,6 @@
 from common.common_consts.common_status_codes import SuccessStatusCode
 from common.dtos.response_dtos import BaseFormatResponse
-from member.permissions import IsGuestExists
+from member.permissions import IsGuestExists, IsMemberLogin
 from node.services.node_detail_service import NodeDetailService
 from rest_framework import status
 from rest_framework.response import Response
@@ -19,6 +19,24 @@ class NodeDetailView(APIView):
             BaseFormatResponse(
                 status_code=SuccessStatusCode.SUCCESS.value,
                 data=service.get_node_detail(node_id).model_dump(),
+            ).model_dump(),
+            status=status.HTTP_200_OK
+        )
+
+
+class NodeDetailAdminView(APIView):
+    permission_classes = [IsMemberLogin]
+
+    def get(self, request, node_id: int):
+        service = NodeDetailService(
+            member_id=request.member.id,
+            map_play_member_id=None,
+        )
+        service.validate_node_meta_editable(node_id)
+        return Response(
+            BaseFormatResponse(
+                status_code=SuccessStatusCode.SUCCESS.value,
+                data=service.get_node_detail_bypass(node_id).model_dump(),
             ).model_dump(),
             status=status.HTTP_200_OK
         )
